Search method fixed. Not working properly. Changed to search manually

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -34,51 +34,31 @@
 
     </com.google.android.material.appbar.MaterialToolbar>
 
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/edtSearchLayout"
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchBox"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/SearchViewStyle"
+        android:layout_height="48dp"
+        app:iconifiedByDefault="false"
+        app:closeIcon="@drawable/quantum_ic_clear_white_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:endIconMode="clear_text"
-        app:endIconDrawable="@drawable/quantum_ic_clear_white_24"
         android:background="@color/dark_gray"
-        app:boxStrokeWidth="0dp"
-        app:hintAnimationEnabled="false"
-        app:hintEnabled="false"
-        app:boxStrokeColor="@android:color/transparent"
-        app:expandedHintEnabled="false"
-        >
+        android:theme="@style/SearchViewStyle"
+        android:hint="Search games, shows, movies..."
+        />
 
-        <com.google.android.material.textfield.TextInputEditText
-
-            android:id="@+id/edtSearchBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_search"
-            android:drawablePadding="8dp"
-            android:inputType="text|textImeMultiLine"
-            android:drawableTint="@color/divider"
-            android:hint="Search games, shows, movies..."
-            android:minHeight="48dp"
-            android:padding="5dp"
-            android:textColor="@color/white"
-            android:textColorHint="@color/divider"
-
-            />
-    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-
         android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edtSearchLayout">
+        app:layout_constraintTop_toBottomOf="@id/searchBox"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
@@ -129,10 +109,26 @@
                 tools:listitem="@layout/rcy_recommended_movies" />
 
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcySearchResultMovies"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/rcyRecommendedMovies"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:listitem="@layout/rcy_movie_item_medium_poster"/>
+
+
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.core.widget.NestedScrollView>
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
