FireBase connected to signup and signin

--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -85,6 +85,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/email"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="@id/txtTitleCreateAccount"
         app:layout_constraintStart_toStartOf="@id/txtTitleCreateAccount"
         app:layout_constraintTop_toBottomOf="@id/txtDesc">
@@ -93,14 +94,16 @@
             android:id="@+id/edtEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/passwordTil"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:passwordToggleEnabled="true"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="@id/txtTitleCreateAccount"
         app:layout_constraintStart_toStartOf="@id/txtTitleCreateAccount"
         app:layout_constraintTop_toBottomOf="@id/emailTil"
@@ -112,7 +115,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
-            android:inputType="textEmailAddress" />
+            android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -126,7 +129,7 @@
         app:layout_constraintStart_toStartOf="@id/txtTitleCreateAccount"
         app:layout_constraintTop_toBottomOf="@id/passwordTil" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnCreateAccount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -135,6 +138,7 @@
         android:text="@string/create_account"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:rippleColor="@color/white"
         android:theme="@style/Button.GetStarted"
         app:layout_constraintEnd_toEndOf="@id/txtTitleCreateAccount"
         app:layout_constraintStart_toStartOf="@id/txtTitleCreateAccount"
