--- a/app/src/main/res/navigation/nav_graph1.xml
+++ b/app/src/main/res/navigation/nav_graph1.xml
@@ -44,7 +44,7 @@
             android:id="@+id/action_signInMain_to_createAccount"
             app:destination="@id/createAccountFragment" />
         <action
-            android:id="@+id/action_signInMainFragment_to_signInEmailFragment"
+            android:id="@+id/action_signUp_to_signIn"
             app:destination="@id/signInFragment"
             app:popUpTo="@id/signUpFragment"
             app:popUpToInclusive="true" />
@@ -133,7 +133,13 @@
         android:id="@+id/verifyEmailFragment"
         android:name="com.example.myapplication.presentation.fragments.verify_email.ui.VerifyEmailFragment"
         android:label="fragment_verify_email"
-        tools:layout="@layout/fragment_verify_email" />
+        tools:layout="@layout/fragment_verify_email" >
+        <action
+            android:id="@+id/action_verifyEmailFragment_to_signInFragment"
+            app:destination="@id/signInFragment"
+            app:popUpTo="@id/verifyEmailFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/finishSignUpFragment"
         android:name="com.example.myapplication.presentation.fragments.finish_signup.ui.FinishSignUpFragment"
