Picture in Picture mode settled but worker for every fragments. Need to develop

--- a/app/src/main/res/layout/fragment_full_screen.xml
+++ b/app/src/main/res/layout/fragment_full_screen.xml
@@ -3,7 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.fragments.fullscreen.FullScreenFragment">
+
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        style="?android:attr/progressBarStyleLarge"
+        app:indicatorColor="@color/red"/>
 
 <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
     android:id="@+id/videoPlayer"
