--- a/app/src/main/res/layout/rcy_movie_item_big_poster.xml
+++ b/app/src/main/res/layout/rcy_movie_item_big_poster.xml
@@ -10,6 +10,17 @@
     android:clickable="true"
     android:focusable="true">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        style="?android:attr/progressBarStyleLarge"
+        app:indicatorColor="@color/red"
+        app:trackColor="@color/red"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
