--- a/app/src/main/res/navigation/nav_graph1.xml
+++ b/app/src/main/res/navigation/nav_graph1.xml
@@ -266,6 +266,11 @@
             android:name="movieId"
             app:argType="long" />
     </fragment>
+    <fragment
+        android:id="@+id/youtubePlayerFragment"
+        android:name="com.example.myapplication.YoutubePlayerFragment"
+        android:label="fragment_youtube_player"
+        tools:layout="@layout/fragment_youtube_player" />
 
 
 </navigation>
