--- a/app/src/main/res/layout/rcy_item_accounts.xml
+++ b/app/src/main/res/layout/rcy_item_accounts.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="12dp"
     android:layout_marginHorizontal="2dp"
     >
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        style="?android:attr/progressBarStyleLarge"
+        app:indicatorColor="@color/red"
+        app:layout_constraintTop_toTopOf="@id/imgAccounts"
+        app:layout_constraintBottom_toBottomOf="@id/imgAccounts"
+        app:layout_constraintStart_toStartOf="@id/imgAccounts"
+        app:layout_constraintEnd_toEndOf="@id/imgAccounts"/>
+
 
 
     <ImageView
@@ -41,4 +54,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_lock"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
