--- a/app/src/main/res/layout/rcy_movie_item_games.xml
+++ b/app/src/main/res/layout/rcy_movie_item_games.xml
@@ -8,6 +8,17 @@
     android:backgroundTint="@android:color/transparent">
 
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        style="?android:attr/progressBarStyleLarge"
+        app:indicatorColor="@color/red"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardvPoster"
         android:layout_width="90dp"
