--- a/app/src/main/res/layout/fragment_full_screen.xml
+++ b/app/src/main/res/layout/fragment_full_screen.xml
@@ -17,7 +17,9 @@
 <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
     android:id="@+id/videoPlayer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    app:enableAutomaticInitialization="false"
+    />
 
 
 </FrameLayout>
